<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ GoBees
  ~ Copyright (c) 2016 - 2017 David Miguel Lozano
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  -->

<com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
    android:id="@+id/refresh_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/recordingsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/recordingsLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recordings_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_recordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_recordings_icon"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/gobees_logo"
                android:src="@drawable/gobees_bee"/>

            <TextView
                android:id="@+id/no_recordings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:text="@string/no_recordings"/>

        </LinearLayout>
    </RelativeLayout>
</com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout>

